# Energy-Forecasting

./: .gitignore  README.md  app.py  basic_nn.py  complex_nn.py  datacleaner.py  main.py  performance_analysis.py  pyproject.toml  rf_model.py  scikits.py  simple_regression.py  testing.ipynb  tpot_model.py  ui.py  ui_datafinder.py  xgboost_model.py
assets/: style.css
csvs/: best_data_parameters.csv  matlab_Basic_nn_cv_metrics_0.csv  matlab_Basic_nn_cv_metrics_1.csv  matlab_Complex_nn_cv_metrics_0.csv  matlab_Complex_nn_cv_metrics_1.csv  matlab_cv_metrics_0.csv  matlab_cv_metrics_1.csv  matlab_metrics_0.csv  matlab_metrics_1.csv  matlab_outputs_0.csv  matlab_outputs_1.csv  matlab_performances_0.csv  matlab_performances_1.csv  matlab_temp_shortened.xlsx  metrics_0.csv  outputs_7.csv  performances_0.csv  y_train.npy
models/: matlab_rf_0.pkl  matlab_rf_1.pkl  matlab_tpot_0.py
models/basic_nn_0/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/matlab_Complex_nn_0/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/matlab_Complex_nn_1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/matlab_baseline_0/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/matlab_baseline_1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/matlab_basic_nn_0/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/matlab_basic_nn_1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
pages/: seminar_presenter.py  ui.py
src/: datacleaner.py  main.py  performance_analysis.py
src/dashboard/: ui.py  ui_datafinder.py
(+97 files in other folders)
