[tool.poetry]
authors = ["David Gaul <d.gaul@uq.net.au>"]
description = "Work related to thesis by David Gaul focusing on energy forecasting and prediction."
name = "energy forecaster"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
dash = "^2.9.3"
keras-tuner = "^1.3.5"
matplotlib = "^3.7.1"
pandas = "^2.0.0"
pydantic = "^1.10.7"
python = ">=3.8,<3.12"
scikit-optimize = "^0.9.0"
sklearn = "^0.0.post4"
statsmodels = "^0.13.5"
tensorflow = {version = "^2.12.0", markers = "sys.platform != 'darwin'"}
tensorflow-macos = {version = "^2.12.0", markers = "sys.platform == 'darwin'"}
tensorflow-metal = {version = "^0.8.0", markers = "sys.platform == 'darwin' and platform_machine == 'arm64'"}
tpot = "^0.11.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
